target/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
19:34:54 **** Incremental Build of configuration Debug for project 015_Led_Toggle_Macros ****
make -j12 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
In file included from ../Src/main.c:8:
../Src/main.c: In function 'main':
../Src/main.h:9:24: error: expected identifier before '(' token
    9 | #define CLOCK_ENABLE   (1)
      |                        ^
../Src/main.c:18:26: note: in expansion of macro 'CLOCK_ENABLE'
   18 |  *pClockControlRegister->CLOCK_ENABLE;
      |                          ^~~~~~~~~~~~
../Src/main.c:16:33: warning: variable 'pClockControlRegister' set but not used [-Wunused-but-set-variable]
   16 |  RCC_AHBN1ENR_t volatile *const pClockControlRegister = ADDR_REG_AHB1ENR;
      |                                 ^~~~~~~~~~~~~~~~~~~~~
make: *** [Src/subdir.mk:25: Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.
